--- a/feature/home/src/main/res/navigation/home_nav_graph.xml
+++ b/feature/home/src/main/res/navigation/home_nav_graph.xml
@@ -3,21 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_nav_graph"
-    app:startDestination="@id/searchFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/searchFragment"
-        android:name="com.jgeun.feature.home.SearchFragment"
-        android:label="fragment_search"
-        tools:layout="@layout/fragment_search" >
-        <action
-            android:id="@+id/action_searchFragment_to_resultFragment"
-            app:destination="@id/resultFragment" />
+        android:id="@+id/homeFragment"
+        android:name="com.jgeun.feature.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+
+        <deepLink
+            app:uri="@string/home_deeplink_url" />
     </fragment>
 
-    <fragment
-        android:id="@+id/resultFragment"
-        android:name="com.jgeun.feature.home.ResultFragment"
-        android:label="fragment_result"
-        tools:layout="@layout/fragment_result" />
 </navigation>
