--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -6,5 +6,5 @@
 
 
     <include app:graph="@navigation/home_nav_graph" />
-
+    <include app:graph="@navigation/serialization_gson_nav_graph" />
 </navigation>
