--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -4,7 +4,7 @@
     android:id="@+id/app_nav_graph"
     app:startDestination="@id/home_nav_graph">
 
-
     <include app:graph="@navigation/home_nav_graph" />
     <include app:graph="@navigation/serialization_gson_nav_graph" />
+    <include app:graph="@navigation/component_navigation_deeplink_nav_graph" />
 </navigation>
