--- a/app/src/main/res/navigation/app_nav_graph.xml
+++ b/app/src/main/res/navigation/app_nav_graph.xml
@@ -2,9 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_nav_graph"
-    app:startDestination="@id/home_nav_graph">
+    app:startDestination="@id/social_login_nav_graph">
 
     <include app:graph="@navigation/home_nav_graph" />
     <include app:graph="@navigation/serialization_gson_nav_graph" />
     <include app:graph="@navigation/component_navigation_deeplink_nav_graph" />
+    <include app:graph="@navigation/social_login_nav_graph" />
 </navigation>
